Add ARIMA plots and messages

--- a/backend/report_template.html
+++ b/backend/report_template.html
@@ -52,6 +52,12 @@
             font-size: 3em;
         }
 
+        .message {
+            text-align: justify;
+            color: darkslategray;
+            padding: 0px 120px 0px 120px;
+        }
+
         .chart {
             margin: 20px;
             padding: 20px;
