--- a/backend/report_template.html
+++ b/backend/report_template.html
@@ -50,6 +50,25 @@
         .summary div h3 {
             margin-bottom: 10px;
             font-size: 3em;
+			margin-top: 0px;
+        }
+
+        .params {
+            display: flex;
+            justify-content: space-around;
+            padding: 20px;
+            background-color: #f9f9f9;
+			font-size: large;
+        }
+
+        .params div {
+            text-align: center;
+            font-size: 1.2em;
+        }
+
+        .params div h3 {
+            margin-bottom: 10px;
+            font-size: 1.3em;
         }
 
         .message {
@@ -70,6 +89,13 @@
             margin: 0 0 10px;
         }
 
+		.custom-hr {
+		  border: none;
+		  border-top: 1px solid #ccc; /* Cor e espessura da linha */
+		  margin: 0px;            /* Espaçamento vertical */
+		  width: 100%;               /* Atravessa a página */
+		}
+
         footer {
             text-align: center;
             padding: 10px;
@@ -88,17 +114,38 @@
             <h2>SME0808 - Séries Temporais e Aprendizado Dinâmico</h2>
         </header>
 
-        <section class="summary">
+        <section class="params">
             <div>
-                <h3>{TOTAL_CASOS}</h3>
+                <p>Estado</p>
+                <h3>{ESTADO}</h3>
+            </div>
+            <div>
+                <p>Síndrome</p>
+                <h3>{SINDROME}</h3>
+            </div>
+            <div>
+                <p>Ano</p>
+                <h3>{ANO}</h3>
+            </div>
+            <div>
+                <p>Evolução do Caso</p>
+                <h3>{EVOLUCAO}</h3>
+            </div>
+        </section>
+
+	   <hr class="custom-hr" />
+
+       <section class="summary">
+            <div>
+                <h3 style="color: #0077b6">{TOTAL_CASOS}</h3>
                 <p>Total de Casos</p>
             </div>
             <div>
-                <h3>{TOTAL_OBITOS}</h3>
+                <h3 style="color: #bc4749">{TOTAL_OBITOS}</h3>
                 <p>Total de Óbitos</p>
             </div>
             <div>
-                <h3>{TOTAL_RECUPERADOS}</h3>
+                <h3 style="color: #386641">{TOTAL_RECUPERADOS}</h3>
                 <p>Total de Recuperados</p>
             </div>
         </section>
